--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,16 @@ server.port=8080
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
+springdoc.show-actuator=true
+
+# Package scanning for Swagger
+springdoc.packages-to-scan=ru.test.numberservice.controller
+springdoc.paths-to-match=/api/**
 
 # File upload settings
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Logging
-logging.level.com.example.numberservice=DEBUG
+logging.level.ru.test.numberservice=DEBUG
+logging.level.org.springdoc=INFO
